# Risk-Aware-Hybrid-LQR-MPC-Navigation-for-Autonomous-Systems

./: .dockerignore  .gitignore  ADAPTIVE_HYBRID_STATUS.md  Adaptive_MPC_Theory.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  REFERENCES.md  TURTLEBOT3_IMPLEMENTATION_PLAN.md  _edit_mpc.py  _edit_sim.py  commit_status.txt  compare_controllers.py  docker-compose.yml  generate_html.py  generate_hybrid_scenarios.py  generate_trajectory_plots.py  hybrid_error.txt  run_simulation.py  runner_output.txt  stat_err.txt  test_adaptive_hybrid.py
docker/: entrypoint.sh  run_full_pipeline.sh  run_gazebo_suite.sh  run_validation_suite.sh
docs/: Adaptive_Hybrid_Controller.md  Code_Review.md  Docker_Gazebo_Workflow.md  IEEE_paper_draft.md  Project_Proposal.md  REFERENCES.md  Work_Progress.md  formal_proofs.md  paper.tex  (+1 more)
ros2_ws/hybrid_nav/: package.xml  setup.cfg  setup.py
ros2_ws/hybrid_nav/hybrid_nav/nodes/: adaptive_mpc_controller_node.py  drive_test_node.py  hybrid_controller_node.py  lqr_controller_node.py  mpc_controller_node.py  obstacle_publisher_node.py  test_node.py
ros2_ws/hybrid_nav/launch/: turtlebot3_adaptive_mpc.launch.py  turtlebot3_hybrid.launch.py  turtlebot3_lqr.launch.py  turtlebot3_mpc.launch.py
ros2_ws/hybrid_nav/rviz/: hybrid_nav.rviz
ros2_ws/hybrid_nav/worlds/: hybrid_obstacle_world.sdf
src/hybrid_controller/: package.xml  setup.py
src/hybrid_controller/config/: params.yaml
src/hybrid_controller/hybrid_controller/controllers/: __init__.py  adaptive_hybrid_controller.py  adaptive_mpc_controller.py  cvxpygen_solver.py  hybrid_blender.py  lqr_controller.py  mpc_controller.py  risk_metrics.py
src/hybrid_controller/hybrid_controller/logging/: simulation_logger.py
src/hybrid_controller/hybrid_controller/models/: actuator_dynamics.py
src/hybrid_controller/hybrid_controller/navigation/: __init__.py  checkpoint_manager.py
src/hybrid_controller/hybrid_controller/nodes/: hybrid_node.py  kinematic_sim_node.py  trajectory_node.py
src/hybrid_controller/hybrid_controller/trajectory/: __init__.py  checkpoint_generator.py  checkpoint_nav.py  curvature.py  reference_generator.py  trajectory_factory.py
src/hybrid_controller/hybrid_controller/utils/: visualization.py
src/hybrid_controller/launch/: hybrid_gazebo.launch.py
(+71 files in other folders)
